properly import dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,34 @@ export(rename_leica_navigator)
 export(rename_zeiss)
 export(rename_zeiss_gui)
 export(whichLeicaSoftware)
+importFrom(XML,getNodeSet)
+importFrom(XML,names.XMLNode)
+importFrom(XML,xmlAttrs)
+importFrom(XML,xmlChildren)
+importFrom(XML,xmlGetAttr)
+importFrom(XML,xmlName)
+importFrom(XML,xmlRoot)
+importFrom(XML,xmlSApply)
+importFrom(XML,xmlTreeParse)
+importFrom(XML,xmlValue)
+importFrom(XML,xpathSApply)
+importFrom(gWidgets2,addSpace)
+importFrom(gWidgets2,gbutton)
+importFrom(gWidgets2,gcheckbox)
+importFrom(gWidgets2,ggroup)
+importFrom(gWidgets2,glabel)
+importFrom(gWidgets2,gprogressbar)
+importFrom(gWidgets2,gspinbutton)
+importFrom(gWidgets2,gtext)
+importFrom(gWidgets2,gwindow)
+importFrom(gWidgets2,insert)
+importFrom(gWidgets2,svalue)
+importFrom(tcltk,tk_choose.dir)
+importFrom(tcltk,tk_choose.files)
+importFrom(tiff,readTIFF)
+importFrom(tiff,writeTIFF)
+importFrom(utils,choose.dir)
+importFrom(utils,choose.files)
+importFrom(utils,packageVersion)
+importFrom(utils,write.csv)
+importFrom(xlsx,write.xlsx)
