--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,10 @@ importFrom(gWidgets2,gtext)
 importFrom(gWidgets2,gwindow)
 importFrom(gWidgets2,insert)
 importFrom(gWidgets2,svalue)
+importFrom(openxlsx,addWorksheet)
+importFrom(openxlsx,createWorkbook)
+importFrom(openxlsx,saveWorkbook)
+importFrom(openxlsx,writeData)
 importFrom(tcltk,tk_choose.dir)
 importFrom(tcltk,tk_choose.files)
 importFrom(tiff,readTIFF)
@@ -42,4 +46,3 @@ importFrom(utils,choose.dir)
 importFrom(utils,choose.files)
 importFrom(utils,packageVersion)
 importFrom(utils,write.csv)
-importFrom(xlsx,write.xlsx)
