improved installation instructions for win and macOS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(rename_leica_navigator)
 export(rename_zeiss)
 export(rename_zeiss_gui)
 export(whichLeicaSoftware)
+import(utils)
 importFrom(XML,getNodeSet)
 importFrom(XML,names.XMLNode)
 importFrom(XML,xmlAttrs)
@@ -42,7 +43,4 @@ importFrom(tcltk,tk_choose.dir)
 importFrom(tcltk,tk_choose.files)
 importFrom(tiff,readTIFF)
 importFrom(tiff,writeTIFF)
-importFrom(utils,choose.dir)
-importFrom(utils,choose.files)
-importFrom(utils,packageVersion)
 importFrom(utils,write.csv)
