--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,22 @@
 Package: htmrenamer
 Type: Package
 Title: File Renaming Tools for High Throughput Microscopy
-Version: 1.2.0
+Version: 1.3.0
 Author: Hugo Botelho <hugobotelho@gmail.com>
 Maintainer: Hugo Botelho <hugobotelho@gmail.com>
-Description: Enables the systematic renaming of Zeiss and Leica automated microscopes.
+Description: Enables the systematic renaming of Zeiss, Olympus and Leica automated microscopes.
 License: GPL-3 + file LICENSE
 URL: https://github.com/hmbotelho/htmrenamer
 BugReports: https://github.com/hmbotelho/htmrenamer/issues
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends: R (>= 3.3.3)
 Imports:
     gWidgets2,
     gWidgets2tcltk,
     openxlsx,
+	RBioFormats,
     reshape2,
     tiff,
     utils,
