--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(rename_leica)
 export(rename_leica_gui)
 export(rename_leica_matrixscreener)
 export(rename_leica_navigator)
+export(rename_olympus)
+export(rename_olympus_gui)
 export(rename_zeiss)
 export(rename_zeiss_gui)
 export(whichLeicaSoftware)
